WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46948
Crash with all-whitespace separators for mfenced
https://bugs.webkit.org/show_bug.cgi?id=46948
Summary
Crash with all-whitespace separators for mfenced
Beth Dakin
Reported
2010-09-30 18:01:46 PDT
Created
attachment 69405
[details]
Test case This ASSERTs in Debug builds. Attaching test case and patch momentarily.
Attachments
Test case
(324 bytes, text/html)
2010-09-30 18:01 PDT
,
Beth Dakin
no flags
Details
Patch
(2.96 KB, patch)
2010-09-30 18:05 PDT
,
Beth Dakin
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2010-09-30 18:05:13 PDT
Created
attachment 69406
[details]
Patch
Beth Dakin
Comment 2
2010-09-30 18:17:54 PDT
Thanks Adele!
http://trac.webkit.org/changeset/68856
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug