https://bugs.webkit.org/show_bug.cgi?id=46948 Crash with all- whitespace separators for mfenced

Reviewed by Adele Peterson.

WebCore:

Check the size of characters instead of separators in case all the
separators were whitespace.

* mathml/RenderMathMLFenced.cpp:
(WebCore::RenderMathMLFenced::updateFromElement):

LayoutTests:

* mathml/fenced-whitespace-separators-crash-expected.txt: Added.
* mathml/fenced-whitespace-separators-crash.html: Added.



Canonical link: https://commits.webkit.org/59485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68856 268f45cc-cd09-0410-ab3c-d52691b4dbfc